--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>{{ renderData.title or title or metadata.title}}</title>
     <meta name="description" content="{{ renderData.description or description or metadata.description }}">
+
+
+    <meta property="og:title" content="{{ title or metadata.title }}">
+    <meta property="og:description" content="{{ description or metadata.description }}">
+    <meta property="og:image" content="{{ '/img/site_icon.png' | url }}">
+    <meta property="og:url" content="{{ '/' | url }}">
+    <meta name="twitter:title" content="{{ title or metadata.title }}">
+    <meta name="twitter:description" content="{{ description or metadata.description }}">
+    <meta name="twitter:image" content="{{ '/img/site_icon.png' | url }}">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="{{ '/css/typography.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
     <link rel="stylesheet" href="https://unpkg.com/prismjs@1.21.0/themes/prism-okaidia.css">
