--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,11 +9,11 @@
 
     <meta property="og:title" content="{{ title or metadata.title }}">
     <meta property="og:description" content="{{ description or metadata.description }}">
-    <meta property="og:image" content="{{ '/img/site_icon.png' | url }}">
-    <meta property="og:url" content="{{ '/' | url }}">
+    <meta property="og:image" content="https://www.nikbrendler.com/img/site_icon.png">
+    <meta property="og:url" content="https://www.nikbrendler.com/">
     <meta name="twitter:title" content="{{ title or metadata.title }}">
     <meta name="twitter:description" content="{{ description or metadata.description }}">
-    <meta name="twitter:image" content="{{ '/img/site_icon.png' | url }}">
+    <meta name="twitter:image" content="https://www.nikbrendler.com/img/site_icon.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="{{ '/css/typography.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
