--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -7,8 +7,8 @@ layout: layouts/base.njk
 
 <hr>
 <ul class="nextprev">
-  {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
-  {%- if nextPost %}<li><-- <a href="{{ nextPost.url | url }}">{{ nextPost.data.title }}</a></li>{% endif %}
   {%- set previousPost = collections.posts | getPreviousCollectionItem(page) %}
-  {%- if previousPost %}<li><a href="{{ previousPost.url | url }}">{{ previousPost.data.title }}</a> --></li>{% endif %}
+  {%- if previousPost %}<li><-- <a href="{{ previousPost.url | url }}">{{ previousPost.data.title }}</a></li>{% endif %}
+  {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
+  {%- if nextPost %}<li><a href="{{ nextPost.url | url }}">{{ nextPost.data.title }}</a> --></li>{% endif %}
 </ul>
