Fix meta tag info

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://www.nikbrendler.com/">
     <meta name="twitter:title" content="{{ title or metadata.title }}">
     <meta name="twitter:description" content="{{ description or metadata.description }}">
-    <meta name="twitter:image" content="https://www.nikbrendler.com/img/site_icon.png">
+    <meta name="twitter:image" content="https://www.nikbrendler.com/img/site-icon.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="{{ '/css/typography.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
